@@ -589,4 +589,13 @@ stopifnot(is.language(predvars), length(predvars) == length(dataClasses)+1,
           all(names(dataClasses) == rownames(factors)))
 ## Previously dropped predvars and dataClasses
 
+
+## prompt() did not escape percent signs properly
+fn <- function(fmt = "%s") {}
+f <- tempfile(fileext = ".Rd")
+prompt(fn, filename = f)
+rd <- tools::parse_Rd(f)
+## Gave syntax errors because the percent sign in Usage 
+## was taken as the start of a comment.
+
 proc.time()
